2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/svg-render.c: Cache RsvgHandles rather than GByteArrays
	containing SVG data. Preparation for move to cairo-only theme engine.
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Rip out libart backend; require the cairo backend, and require cairo >= 1.0.2
	* Makefile.am: re-enable the gtk-engine and gdk-pixbuf-loader. Ditto, library re-org
	* librsvg-2.0.pc.in: Ditto
	* librsvg.spec.in: Ditto
	* rsvg.c: Ditto
	* gtk-engine/Makefile.am: Ditto
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Implement image zooming. Todo: rewrite this to use Cairo.
	
2005-10-21 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c: More robust way of getting your language
	
2005-10-22 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* a_lot_of_places: implemented a system of late normalizations of lengths. Now used in masks and svgs
	* rsvg-base.c: find out the size of the contents of an SVG if there is nothing else to go on.

2005-10-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Prioritize the cairo backend over the libart one; disable the libart backend until it builds again
	* Makefile.am: Ditto
	* rsvg-cairo-draw.c (rsvg_cairo_generate_mask): Fix major memleak generating a mask surface
	* rsvg-filter.c (rsvg_new_filter_primitive_light_source): Memleak
	* rsvg-mask.c (rsvg_new_clip_path): Ditto
	
2005-10-20 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: filters now using pre-multiplied alpha and have changable byte ordering
	* rsvg-cairo-draw.c: handles bounding boxes around images correctly
	
2005-10-19 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-draw.c: series of hacks to make filters work
	* rsvg-filter.c: use the new bbox system used in rsvg-cairo for filters
	* rsvg-base.c: moved RsvgCairoBbox to RsvgBbox
	
2005-10-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-draw.c: No need to new0() image data, it just wastes CPU